--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+openldap (2.4.40+dfsg-1+deb8u3) jessie-security; urgency=high
+
+  * debian/patches/ITS-8655-paged-results-double-free.patch: Fix a double free 
+    in the MDB backend on a search including the Paged Results control with a 
+    page size of 0. (ITS#8655) (CVE-2017-9287) (Closes: #863563)
+
+ -- Ryan Tandy <ryan@nardis.ca>  Sun, 28 May 2017 16:08:03 -0700
+
+openldap (2.4.40+dfsg-1+deb8u2) jessie; urgency=medium
+
+  * debian/patches/ITS8003-fix-off-by-one-in-LDIF-length.patch: Import
+    upstream patch to fix a crash when adding a large attribute value with the
+    auditlog overlay enabled. (Closes: #806909)
+
+ -- Ryan Tandy <ryan@nardis.ca>  Sat, 12 Dec 2015 16:11:38 -0800
+
+openldap (2.4.40+dfsg-1+deb8u1) jessie-security; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Add ITS8240-remove-obsolete-assert.patch patch.
+    Import upstream patch to remove an unnecessary assert(0) that could be
+    triggered remotely by an unauthenticated user by sending a malformed BER
+    element. (CVE-2015-6908, Closes: #798622)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 11 Sep 2015 10:30:43 +0200
+
 openldap (2.4.40+dfsg-1) unstable; urgency=medium
 
   * Remove inetorgperson.schema from the upstream source. Replace it with a
